; ModuleID = '/home/carl/AnghaBench/postgres/contrib/jsonb_plperl/extr_jsonb_plperl.c_AV_to_JsonbValue.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/jsonb_plperl/extr_jsonb_plperl.c_AV_to_JsonbValue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@dTHX = common dso_local global i32 0, align 4
@WJB_BEGIN_ARRAY = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@WJB_END_ARRAY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*, i32**)* @AV_to_JsonbValue to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @AV_to_JsonbValue(i32* %0, i32** %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32**, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32**, align 8
  store i32* %0, i32** %3, align 8
  store i32** %1, i32*** %4, align 8
  %8 = load i32, i32* @dTHX, align 4
  %9 = load i32*, i32** %3, align 8
  %10 = call i64 @av_len(i32* %9)
  %11 = add nsw i64 %10, 1
  store i64 %11, i64* %5, align 8
  %12 = load i32**, i32*** %4, align 8
  %13 = load i32, i32* @WJB_BEGIN_ARRAY, align 4
  %14 = call i32* @pushJsonbValue(i32** %12, i32 %13, i32* null)
  store i64 0, i64* %6, align 8
  br label %15

15:                                               ; preds = %32, %2
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %5, align 8
  %18 = icmp slt i64 %16, %17
  br i1 %18, label %19, label %35

19:                                               ; preds = %15
  %20 = load i32*, i32** %3, align 8
  %21 = load i64, i64* %6, align 8
  %22 = load i32, i32* @FALSE, align 4
  %23 = call i32** @av_fetch(i32* %20, i64 %21, i32 %22)
  store i32** %23, i32*** %7, align 8
  %24 = load i32**, i32*** %7, align 8
  %25 = icmp ne i32** %24, null
  br i1 %25, label %26, label %31

26:                                               ; preds = %19
  %27 = load i32**, i32*** %7, align 8
  %28 = load i32*, i32** %27, align 8
  %29 = load i32**, i32*** %4, align 8
  %30 = call i32 @SV_to_JsonbValue(i32* %28, i32** %29, i32 1)
  br label %31

31:                                               ; preds = %26, %19
  br label %32

32:                                               ; preds = %31
  %33 = load i64, i64* %6, align 8
  %34 = add nsw i64 %33, 1
  store i64 %34, i64* %6, align 8
  br label %15

35:                                               ; preds = %15
  %36 = load i32**, i32*** %4, align 8
  %37 = load i32, i32* @WJB_END_ARRAY, align 4
  %38 = call i32* @pushJsonbValue(i32** %36, i32 %37, i32* null)
  ret i32* %38
}

declare dso_local i64 @av_len(i32*) #1

declare dso_local i32* @pushJsonbValue(i32**, i32, i32*) #1

declare dso_local i32** @av_fetch(i32*, i64, i32) #1

declare dso_local i32 @SV_to_JsonbValue(i32*, i32**, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
